# angular-django-projet

./: README.md
backend/: db.sqlite3  pyproject.toml
backend/env/: pyvenv.cfg
backend/env/Scripts/: activate  activate.bat
backend/mentor/: admin.py  models.py  serializers.py  urls.py  views.py
backend/mentor/migrations/: 0001_initial.py  0002_alter_course_schedule.py
backend/server/: settings.py  urls.py
client/: angular.json
client/.angular/cache/17.0.3/frontend/: .tsbuildinfo
client/src/: index.html
client/src/app/: app.component.html  app.component.ts  app.module.ts  app.routes.ts
client/src/app/about/: about.component.html
client/src/app/contact/: contact.component.html  contact.component.ts
client/src/app/course-details/: course-details.component.html  course-details.component.ts
client/src/app/courses/: courses.component.html  courses.component.ts
client/src/app/footer/: footer.component.html  footer.component.ts
client/src/app/home/: home.component.html  home.component.ts
client/src/app/model/: contact.model.ts  course.model.ts  trainer.model.ts
client/src/app/navbar/: navbar.component.html
client/src/app/services/: contact.service.ts  course.service.ts  trainers.service.ts
client/src/app/trainers/: trainers.component.html  trainers.component.ts
