[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["saif zhioua <85803267+sai4w@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-jazzmin = "^2.6.0"
djangorestframework = "^3.14.0"
pillow = "^10.1.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
